# mirage-wm

./: BLACK_SCREEN_FIX.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  RENDERING_BUGS.md  SETUP.md  WAYLAND_PREVIEW.md  diagnose.sh  install.sh  mirage-wm-session.sh  mirage-wm.desktop
src/: decorations.rs  dock.rs  launchpad.rs  layout.rs  main.rs  wallpaper.rs
src/backend/: winit.rs
src/state/: mod.rs
